Updated styling of scollbar to ensure invisibility

--- a/onlycars/src/styles/LightMode.css
+++ b/onlycars/src/styles/LightMode.css
@@ -15,6 +15,8 @@
 
 ::-webkit-scrollbar {
     width: 0px;
+    color: #00000000;
+    background-color: #00000000;
   }
 
 p {
